2022_KinD_kubernetes-in-docker/k8s_hello-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-deploy

spec:
  selector:
    matchLabels: { app: hello }

  replicas: 5
  template:
    metadata:
      labels: { app: hello }
    spec:
      containers:
      - name: hello
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/hello:main
        imagePullPolicy: "Always"
        ports:
        - { containerPort: 8080, name: hello, protocol: TCP }
        command: ["./main"]
        args: ["-addr", ":8080"]

---
apiVersion: v1
kind: Service

metadata:
  name: hello-clusterip

spec:
  type: ClusterIP
  selector: { app: "hello" }
  ports:
  - { name: "hello-clusterip", protocol: "TCP", targetPort: 8080, port: 1080 }
  # targetPort: containerPort
