2022_KinD_kubernetes-in-docker/k8s_hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service: { name: hello-clusterip, port: { number: 1080 } }
